--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "express-hello-world",
+  "name": "nodejs",
   "version": "1.0.0",
-  "description": "Express Hello World on Render",
-  "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
-  "author": "Render Developers",
-  "license": "MIT",
-  "private": false,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=14"
+    "@types/node": "^18.0.6",
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "node-fetch": "^3.2.6",
+    "pako": "^2.1.0",
+    "snappy": "^7.2.2",
+    "uuid-random": "^1.3.2",
+    "ws": "^8.13.0"
   }
 }
